// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// These are the messages that get persisted - the events, plus the current
// state (Cart) for snapshots.

syntax = "proto3";

package com.example.shop.domain;

option java_outer_classname = "ShopCartDomain";
option go_package = "github.com/lightbend/akkaserverless-go-sdk/shop/persistence;persistence";

import "akkaserverless/annotations.proto";

// Describes how this domain relates to an event sourced entity
option (akkaserverless.file).event_sourced_entity = {
  name: "ShopCart"
  entity_type: "eventsourced-shop-cart"
  state: "Cart"
  events: ["ItemAdded", "ItemRemoved"]
};

message LineItem {
  string productId = 1;
  string name = 2;
  int32 quantity = 3;
}

// The item added event.
message ItemAdded {
  LineItem item = 1;
}

// The item removed event.
message ItemRemoved {
  string productId = 1;
}

// The shopping cart state.
message Cart {
  repeated LineItem items = 1;
}
